- list of options in documentation - fixed anchor moving out of bounds issue

--- a/main.css
+++ b/main.css
@@ -6,9 +6,17 @@ body {
     margin: 0em;
 }
 
+.code {
+    font-family: "Ubuntu Mono";
+    color: #1264a4;
+}
+
+.gr {
+    color: #999999;
+}
+
 .emph {
     padding: 4px;
-    font-family: "Ubuntu Mono";
     background-color: #eeeeee;
     border-radius: 3px;
     border: 1px solid #dddddd;
@@ -24,6 +32,57 @@ body {
     padding-bottom: 0.4em;
     font-family: "Ubuntu Mono";
     font-size: 12px;
+}
+
+h1 {
+    font-family: 'Roboto Condensed';
+    font-weight: 700;
+    font-size: 60px;
+    display: inline;
+    background-color: #000000;
+    color:transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+}
+
+ul {
+    list-style-type:none
+}
+
+dl {
+    width: 100%;
+    overflow: hidden;
+    padding: 0;
+    margin: 0
+}
+dt {
+    float: left;
+    width: 8%;
+    /* adjust the width; make sure the total of both is 100% */
+    padding: 0;
+    margin: 0
+}
+dd {
+    font-family: 'Roboto Condensed';
+    color: #000000;
+    float: left;
+    width: 92%;
+    /* adjust the width; make sure the total of both is 100% */
+    padding: 0;
+    margin: 0
+}
+
+
+button {
+    background-color: #e7e7e7;
+    border: none;
+    color: #222222;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    font-family: "Roboto Condensed", sans-serif;
 }
 
 #parameters {
